<resources>
    <string name="app_name">Show Time</string>
    <string name="action_settings">Settings</string>

    <!-- login-->
    <string name="login_message">Sign In To Your Account</string>
    <string name="email_hint">Enter your email</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="login">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>

    <!-- shared pref-->
    <string name="LOGIN_PREFS">edu.tacoma.uw.datalab.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>

    <!--logout -->
    <string name="logout">Logout</string>

    <string name="share">Share</string>

    <!-- Register -->
    <string name="register_first_name_hint">Enter First name</string>
    <string name="register_last_name_hint">Enter Last name</string>
    <string name="register_username_name_hint">Enter username</string>
    <string name="register_email_name_hint">Enter Email Address</string>
    <string name="register_password_name_hint">Enter Password</string>
    <string name="register_send_button">Register Sent</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_registerrr">RegisterrrActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>